# finance-manager

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_tx_time_desc_index.py  0003_budgets_table.py
backend/app/: main.py
backend/app/api/: accounts.py  admin_tokens.py  auth.py  budgets.py  categories.py  dashboard.py  dedup.py  deps.py  rules.py  statements.py  summary.py  transactions.py
backend/app/core/: config.py  db.py
backend/app/db/: seed.py  seed_categories.py  seed_merchant_rules.py
backend/app/models/: __init__.py  account.py  api_token.py  base.py  budget.py  category.py  dedup_candidate.py  merchant_rule.py  statement_import.py  transaction.py  user.py
backend/app/schemas/: __init__.py  account.py  api_token.py  auth.py  budget.py  category.py  dashboard.py  dedup.py  rule.py  statement.py  summary.py  transaction.py
backend/app/services/: api_token.py  auth.py  budget.py  classifier.py  dashboard.py  (+3 more)
backend/scripts/: verify_slice_a.ps1  verify_slice_b.ps1  verify_slice_c.ps1  verify_slice_d.ps1  verify_slice_e.ps1
backend/tests/: conftest.py  test_config.py  test_health.py  test_seed_categories.py  test_seed_merchant_rules.py  test_seed_user.py
mcp_server/: Dockerfile  README.md  pyproject.toml
mcp_server/app/: backend_client.py  config.py  errors.py  main.py
mcp_server/tests/: conftest.py  test_backend_client.py  test_integration.py  test_main_auth.py  test_tool_add_transaction.py  test_tool_bulk_update_category_by_merchant.py  test_tool_confirm_dedup_pair.py  test_tool_find_merchant.py  test_tool_get_account_balances.py  test_tool_get_summary.py  test_tool_list_pending_classifications.py  test_tool_list_pending_dedup_pairs.py  test_tool_list_transactions.py  test_tool_registry.py  test_tool_update_category.py
(+171 files in other folders)
